# libOPNMIDI

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  libOPNMIDI-config.cmake.in  libOPNMIDI-test.pro  libOPNMIDI.pro  make.rules
.github/workflows/: macos-ci.yml  ubuntu-ci.yml  windows-ci.yml  windows-winmm-ci.yml
.semaphore/: semaphore.yml
android/: Android.mk
android/jni/: Android.mk
cmake/: libSDL2.cmake
cmake/win-ci/: lib-sdk.cmd  vlc-plugin.cmd  winmm-drivers.cmd
examples/golang-mid2wav/: README.txt  mid2wav.go
examples/python-alsa/: playmidi.py
examples/python-pyaudio/: playmidi.py
examples/sdl2_audio/: CMakeLists.txt  sdl2_sample.c
fm_banks/: Nineko-readme.txt  Nineko.wopn  fmmidi.wopn  gems-fmlib-gmize.wopn  gm.wopn  gs-by-papiezak-and-sneakernets.wopn  gs-by-papiezak.wopn  readme.txt  wonp specification.txt  wopn2hpp.sh  xg.wopn  xg_sync_heads.sh
include/: opnmidi.h
src/: file_reader.hpp  midi_sequencer.h  midi_sequencer.hpp  midi_sequencer_impl.hpp  opnbank.h  opnmidi.cpp  opnmidi.h  opnmidi_bankmap.h  opnmidi_bankmap.tcc  opnmidi_cvt.hpp  opnmidi_load.cpp  opnmidi_midiplay.cpp  opnmidi_midiplay.hpp  opnmidi_mus2mid.c  opnmidi_opn2.cpp  opnmidi_opn2.hpp  opnmidi_private.cpp  opnmidi_private.hpp  opnmidi_ptr.hpp  opnmidi_sequencer.cpp  opnmidi_wave.cpp  opnmidi_xmi2mid.c  ym3438.c  ym3438.h
src/chips/: gens_opn2.cpp  gens_opn2.h  gx_opn2.cpp  gx_opn2.h  mame_opn2.cpp  mame_opn2.h  mame_opna.cpp  mame_opna.h  np2_opna.cpp  np2_opna.h  nuked_opn2.cpp  nuked_opn2.h  opn_chip_base.cpp  opn_chip_base.h  opn_chip_base.tcc  opn_chip_family.h  opn_wave_synth.cpp  opn_wave_synth.h  pmdwin_opna.cpp  pmdwin_opna.h  vgm_file_dumper.cpp  vgm_file_dumper.h  ym2608_lle.cpp  ym2608_lle.h  ym2612_lle.cpp  ym2612_lle.h  ymf276_lle.cpp  ymf276_lle.h  ymfm_opn2.cpp  ymfm_opn2.h  ymfm_opna.cpp  ymfm_opna.h
src/chips/gens/: Ym2612.cpp  Ym2612_p.hpp
src/chips/gx/: gx_ym2612.c  ym2612.c  ym2612.h
src/chips/mame/: mame_ym2612fm.c  mame_ym2612fm.h  mamedef.h
src/chips/mamefm/: 2608intf.h  emu.h  emutypes.h  fm.cpp  resampler.cpp  resampler.hpp  ymdeltat.h
src/chips/np2/: compiler.h  fmgen_file.cpp  fmgen_fmgen.cpp  fmgen_fmgen.h  fmgen_fmgeninl.h  fmgen_opm.cpp  fmgen_opm.h  fmgen_opna.cpp  fmgen_opna.h  fmgen_psg.cpp  fmgen_psg.h
src/chips/nuked/: ym3438.c  ym3438.h
src/chips/nuked_lle/: fmopn2.c  fmopn2.h  fmopna_2608.c  fmopna_2610.c  fmopna_2612.c  fmopna_impl.h  fmopna_impl_c.h  nopn2.c  ym3438.c  ym3438.h
src/chips/pmdwin/: opna.c  psg.c
src/chips/tsf/: tsf.h
src/chips/wavesynth/: pcm_drums1kick.h  pcm_drums1snare.h  pcm_drums3kick.h  pcm_drums3snare.h  pcm_kick.h  pcm_orchestraBassDrum.h  pcm_orchestraKik.h  pcm_orchestraSnare.h  pcm_snare.h  pcm_snare2.h
src/chips/ymfm/: ymfm.h  ymfm_fm.h  ymfm_fm.ipp  ymfm_opn.cpp  ymfm_opn.h
src/midiplay/: Makefile  opnplay.cpp
src/models/: model_apogee.c  model_dmx.c  model_freq_opn2.c  model_freq_opna.c  model_generic.c  model_w9x.c  opn_models.cmake  opn_models.h
src/models/util/: freq-opn.c  freq-opna.c  opnbrightness.c
src/wopn/: wopn_file.c  wopn_file.h
test/: CMakeLists.txt
test/activenotes/: CMakeLists.txt  active_notes.cpp
test/channel-users/: CMakeLists.txt  channel_users.cpp
test/pcm-samples/: Hand Clap.raw  drumcrackersbass.raw  drumcrackerssnare.raw  drums1kick.raw  drums1snare.raw  drums2clap.raw  drums2tomhi(L).raw  drums3kick.raw  drums3snare.raw  kick.raw  make_heads.sh  orchestraBassDrum.raw  orchestraKik.raw  orchestraSnare.raw  s2tomlow(R).raw  s2tomlowerer(L).raw  s2tomlowererer(L).raw  s2tomlowerererer(L).raw  s2tommed(L).raw  snare.raw  snare2.raw  timpani(R).raw  timpanihi(L).raw  tom.raw
test/pcm-samples/wavs/: to_raw_pcm.sh
test/wopn-file/: CMakeLists.txt  wopn_file.cpp
utils/ZLib/: ChangeLog  ZLib.2013.vcxproj  ZLib.2017.vcxproj  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  trees.c  uncompr.c  zconf.h  zconf.h.in  zlib.cmake  zutil.c  zutil.h
utils/dac_test/: CMakeLists.txt  dac_test.cpp
utils/fmmidi_prog/: 002 [GYB] fmmidi.wopn  fmmidi.wopn  make.sh  midiprogram.h  program2wopn.c
utils/fmmidi_prog/wopn/: wopn_file.c  wopn_file.h
utils/midi2vgm/: CMakeLists.txt  midi2vgm.cpp
utils/midi2vgm/compact/: chip_cmp.cpp  common.h  vgm_cmp.cpp
utils/midiplay/: CMakeLists.txt  audio.h  audio_alsa.c  audio_sdl.c  audio_winmm.c  dev_setup.cpp  dev_setup.h  misc.c  misc.h  opnplay.cpp
utils/midiplay/playback/: playback.h  playback_audio.cpp  playback_common.cpp  playback_wave.cpp
utils/vlc_codec/: CMakeLists.txt  gm_opn_bank.h  libopnmidi.c
utils/winmm_drv/: CMakeLists.txt
utils/winmm_drv/config/: regconfig.c  regconfig.h
utils/winmm_drv/cpl/: config_dialog.c  opnconfig.def  opnconfig.manifest  opnconfig.rc  res-cpl.rc  res-tool.rc  resource.h
utils/winmm_drv/installer/: drvinst.c  drvinst.exe.manifest
utils/winmm_drv/src/: MidiSynth.cpp  MidiSynth.h  stdafx.h  winmm_drv.cpp  winmm_drv.def
utils/winmm_drv/test/: test.c
utils/wopn2hpp/: CMakeLists.txt  wopn2hpp.c  wopn2hpp.sh
